Generation of ground truth from query file. Creation of project structure for gRPC server.