@@ -190,6 +190,32 @@ tasks {
         }
     }
 
+    register<JavaExec>("generateGroundTruthBigANNBench") {
+        group = "application"
+        mainClass = "jetbrains.vectoriadb.index.bench.GenerateGroundTruthBigANNBench"
+        classpath = sourceSets["main"].runtimeClasspath + configurations["benchDependencies"]
+        jvmArgs = listOf(
+            "-server",
+            "-Xmx110g",
+            "-XX:+HeapDumpOnOutOfMemoryError",
+            "--add-modules",
+            "jdk.incubator.vector",
+            "-Djava.awt.headless=true",
+            "--enable-preview"
+        )
+        systemProperties = mapOf(
+            "bench.path" to (project.findProperty("bench.path"))
+        )
+
+        if (jdkHome != null) {
+            executable = "$jdkHome/bin/java"
+        } else {
+            javaLauncher.set(rootProject.javaToolchains.launcherFor {
+                languageVersion.set(JavaLanguageVersion.of(20))
+            })
+        }
+    }
+
     register<JavaExec>("runGist1MBench") {
         group = "application"
         mainClass = "jetbrains.exodus.diskann.bench.GIST1MBench"
